--- a/src/basis/新鲜出炉，细数ES7-11中的特性更新.md
+++ b/src/basis/新鲜出炉，细数ES7-11中的特性更新.md
@@ -1,3 +1,10 @@
+> 此文初衷如下几点：
+> 1. 源于为了了解不同阶段浏览器对不有些方法的支持情况，方便快速定位不同浏览器下的兼容问题；
+> 2. 同时做为文档查阅，能更清楚的了解每一阶段的新特性；
+> 3. 帮助大家面试加分，试问熟知每个阶段的更新细节总归会给面试官好印象；
+> 
+> 以此与大家共勉，有帮助的话顺手给个赞，谢谢~~
+
 ### ES11新特性（2020发布）
 
 > ECMAScript 语言规范的第 11 版本。
@@ -45,7 +52,7 @@ console.log(array[1]);
 
 - 兼容性
 
-![matchAll 兼容性](/Users/huyi/IceSpin/YDStudy/patch_2020/images/matchAll_broswer.png)
+![matchAll 兼容性](./images/matchAll_broswer.png)
 
 #### Dynamic import 动态引入
 
@@ -107,7 +114,7 @@ function callback() {
 
 - 兼容性
 
-![](/Users/huyi/IceSpin/YDStudy/patch_2020/images/import.meta_broswer.png)
+![](./images/import.meta_broswer.png)
 
 #### export * as alias from namespace
 
@@ -157,7 +164,7 @@ Promise.allSettled(promises).then((results) =>
 
 - 兼容性
 
-![](/Users/huyi/IceSpin/YDStudy/patch_2020/images/promise.allSettled_broswer.png)
+![](./images/promise.allSettled_broswer.png)
 
 #### BigInt
 
@@ -1045,19 +1052,265 @@ async function* asyncGenerator() {
 
 #### [`Object.values`/`Object.entries`](https://github.com/tc39/proposal-object-values-entries)
 
+- `Object.values`
+
+> `Object.values()`方法返回一个给定对象自身的所有可枚举属性值的数组，值的顺序与使用[`for...in`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/for...in)循环的顺序相同 ( 区别在于 for-in 循环枚举原型链中的属性 )。
+
+- `Object.entries`
+
+> `Object.entries()方法返回一个给定对象自身可枚举属性的键值对数组，其排列与使用 [`for...in`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/for...in) 循环遍历该对象时返回的顺序一致（区别在于 for-in 循环还会枚举原型链中的属性）。
+
+- 基本使用
+
+```javascript
+var obj = { foo: 'bar', baz: 42 };
+console.log(Object.values(obj)); // ['bar', 42]
+console.log(Object.entries(obj)); // [ ['foo', 'bar'], ['baz', 42] ]
+```
+
+- 兼容性
+
+![](./images/entries_broswer.png)![](./images/values_broswer.png)
+
 #### [String padding](https://github.com/tc39/proposal-string-pad-start-end)
+
+- `String.prototype.padStart`
+
+> **`padStart()`** 方法用另一个字符串填充当前字符串(如果需要的话，会重复多次)，以便产生的字符串达到给定的长度。从当前字符串的左侧开始填充。
+
+- `String.prototype.padEnd`
+
+> **`padEnd()`** 方法会用一个字符串填充当前字符串（如果需要的话则重复填充），返回填充后达到指定长度的字符串。从当前字符串的末尾（右侧）开始填充。
+
+- 语法
+
+```javascript
+/** 
+	* 参数
+	* 
+	* targetLength：当前字符串需要填充到的目标长度。如果这个数值小于当前字符串的长度，则返回当前字符串本身。
+ 	* padString(可选)：填充字符串。如果字符串太长，使填充后的字符串长度超过了目标长度，则只保留最左侧的部分，其他部分会被截断。此参数的缺省值为 " "（U+0020）。
+ 	*/
+str.padStart(targetLength [, padString])
+str.padEnd(targetLength [, padString])
+```
+
+- 基本使用
+
+```javascript
+'abc'.padStart(10);         // "       abc"
+'abc'.padStart(10, "foo");  // "foofoofabc"
+'abc'.padStart(6,"123465"); // "123abc"
+'abc'.padStart(8, "0");     // "00000abc"
+'abc'.padStart(1);          // "abc"
+
+'abc'.padEnd(10);          // "abc       "
+'abc'.padEnd(10, "foo");   // "abcfoofoof"
+'abc'.padEnd(6, "123456"); // "abc123"
+'abc'.padEnd(1);           // "abc"
+```
+
+- 兼容性
+
+![](./images/padStart_broswer.png)
+
+![](./images/padEnd_broswer.png)
 
 #### [`Object.getOwnPropertyDescriptors`](https://github.com/tc39/proposal-object-getownpropertydescriptors)
 
-#### [Trailing commas in function parameter lists and calls](https://github.com/tc39/proposal-trailing-function-commas)
+> `Object.getOwnPropertyDescriptors()` 方法用来获取一个对象的所有自身属性的描述符。
+>
+> 入参：任意对象
+>
+> 返回：所指定对象的所有自身属性的描述符，如果没有任何自身属性，则返回空对象。
+
+- 基本使用
+
+```javascript
+// Object.assign() 方法只能拷贝源对象的可枚举的自身属性，同时拷贝时无法拷贝属性的特性们，而且访问器属性会被转换成数据属性，也无法拷贝源对象的原型，该方法配合 Object.create() 方法可以实现上面说的这些。
+Object.create(
+  Object.getPrototypeOf(obj), 
+  Object.getOwnPropertyDescriptors(obj) 
+);
+```
+
+- 兼容性
+
+![](./images/getOwnPropertyDescriptors_broswer.png)
+
+#### [函数/参数列表中允许逗号结尾（Trailing commas in function parameter lists and calls）](https://github.com/tc39/proposal-trailing-function-commas)
+
+> 在对由版本控制系统管理的代码（git，subversion，mercurial等）进行此更改的过程中，第3行和第9行的非常规/注释代码历史记录信息将更新为指向添加逗号的人（而是而不是最初添加参数的人）。
+
+```javascript
+1: function clownPuppiesEverywhere(
+ 2:   param1,
+ 3:   param2, // updated to add a comma
+ 4:   param3  // updated to add new parameter
+ 5: ) { /* ... */ }
+ 6: 
+ 7: clownPuppiesEverywhere(
+ 8:   'foo',
+ 9:   'bar', // updated to add a comma
+10:   'baz'  // updated to add new parameter
+11: );
+```
+
+> 为了帮助缓解此问题，某些其他语言（Python，D，Hack等……可能还有其他……）添加了语法支持，以允许在这些参数列表中使用逗号结尾。这使代码提供者可以始终在这些每行参数列表之一中以尾随逗号结束参数添加，而不必担心代码归因问题
+
+```javascript
+ 1: function clownPuppiesEverywhere(
+ 2:   param1,
+ 3:   param2, // Next parameter that's added only has to add a new line, not modify this line
+ 5: ) { /* ... */ }
+ 6: 
+ 7: clownPuppiesEverywhere(
+ 8:   'foo',
+ 9:   'bar', // Next parameter that's added only has to add a new line, not modify this line
+11: );
+```
+
+> 注意，该建议仅与语法有关，并且不对语义进行任何更改，因此尾随逗号的存在对诸如之类的东西没有影响`<<function>>.length`。
 
 #### [Async functions](https://github.com/tc39/ecmascript-asyncawait)
 
-#### [Shared memory and atomics](https://github.com/tc39/ecmascript_sharedmem)
+> async函数是使用`async`关键字声明的函数。 async函数是[`AsyncFunction`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/AsyncFunction)构造函数的实例， 并且其中允许使用`await`关键字。`async`和`await`关键字让我们可以用一种更简洁的方式写出基于[`Promise`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise)的异步行为，而无需刻意地链式调用`promise`。
+>
+> async函数可能包含0个或者多个[`await`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators/await)表达式。await表达式会暂停整个async函数的执行进程并出让其控制权，只有当其等待的基于promise的异步操作被兑现或被拒绝之后才会恢复进程。promise的解决值会被当作该await表达式的返回值。使用`async` / `await`关键字就可以在异步代码中使用普通的`try` / `catch`代码块。
+>
+> `await`关键字只在async函数内有效。如果你在async函数体之外使用它，就会抛出语法错误 [`SyntaxError`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/SyntaxError) 。
+>
+> `async`/`await`的目的为了简化使用基于promise的API时所需的语法。`async`/`await`的行为就好像搭配使用了生成器和promise。
+
+- 基本使用
+
+```javascript
+async function foo() {
+   return 1
+}
+// 相当于
+function foo() {
+   return Promise.resolve(1)
+}
+
+// async函数的函数体可以被看作是由0个或者多个await表达式分割开来的。
+// 从第一行代码直到（并包括）第一个await表达式（如果有的话）都是同步运行的。
+// 这样的话，一个不含await表达式的async函数是会同步运行的。
+// 然而，如果函数体内有一个await表达式，async函数就一定会异步执行。
+async function foo() {
+   await 1
+}
+// 等价于
+function foo() {
+   return Promise.resolve(1).then(() => undefined)
+}
+```
+
+- 兼容性
+
+![](./images/async_broswer.png)
+
+#### [`共享内存`和`Atomics`（Shared memory and atomics）](https://github.com/tc39/ecmascript_sharedmem)
+
+> `共享内存`和`Atomics`：引入了一个新的构造函数 `SharedArrayBuffer` 和 具有辅助函数的命名空间对象 `Atomics`
+
+- **`SharedArrayBuffer`** 对象用来表示一个通用的，固定长度的原始二进制数据缓冲区，类似于 [`ArrayBuffer`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/ArrayBuffer) 对象，它们都可以用来在共享内存（shared memory）上创建视图。与 `ArrayBuffer` 不同的是，`SharedArrayBuffer` 不能被分离。
+
+>  为了将一个[`SharedArrayBuffer`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/SharedArrayBuffer) 对象从一个用户代理共享到另一个用户代理（另一个页面的主进程或者当前页面的一个 `worker` ）从而实现共享内存，我们需要运用 `postMessage` 和结构化克隆算法（ [structured cloning](https://developer.mozilla.org/en-US/docs/Web/API/Web_Workers_API/Structured_clone_algorithm) ）。
+>
+>  `结构化克隆算法`接收被映射到一个新的 `SharedArrayBuffers` 对象上的 `SharedArrayBuffers` 对象与 `TypedArrays` 对象。在这两种映射下，这个新的 `SharedArrayBuffer` 对象会被传递到目标用户代理的接收函数上，导致在目标用户代理产生了一个新的私有 `SharedArrayBuffer` 对象（正如 [`ArrayBuffer`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/ArrayBuffer) 一样）。然而，这两个 `SharedArrayBuffer` 对象指向的共享数据块其实是同一个，并且在某一代理中的一个块的副作用将最终导致另一个代理具有可见性。
+
+- **`Atomics`** 对象提供了一组静态方法对 [`SharedArrayBuffer`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/SharedArrayBuffer) 和  [`ArrayBuffer`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/ArrayBuffer) 对象进行原子操作。
+
+> 这些原子操作属于 `Atomics` 模块。与一般的全局对象不同，`Atomics` 不是构造函数，因此不能使用 [new](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators/new) 操作符调用，也不能将其当作函数直接调用。`Atomics` 的所有属性和方法都是静态的（与 [`Math`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Math) 对象一样）。
 
 ### ES7新特性（2016发布）
 
 #### [`Array.prototype.includes`](https://github.com/tc39/Array.prototype.includes)
 
-#### [Exponentiation operator](https://github.com/tc39/proposal-exponentiation-operator)
+> `includes()` 方法用来判断一个数组是否包含一个指定的值，根据情况，如果包含则返回 true，否则返回false。
 
+- 语法
+
+```javascript
+/**
+	* valueToFind：需要查找的元素值。
+	* fromIndex（可选）：从fromIndex 索引处开始查找 valueToFind。如果为负值，则按升序从 array.length + fromIndex 的索引开始搜 （即使从末尾开始往前跳 fromIndex 的绝对值个索引，然后往后搜寻）。默认为 0。
+	* 返回：返回一个布尔值 Boolean ，如果在数组中找到了（如果传入了 fromIndex ，表示在 fromIndex 指定的索引范围中找到了）则返回 true 。
+	*/
+arr.includes(valueToFind[, fromIndex])
+```
+
+- 基本使用
+
+```javascript
+[1, 2, 3].includes(2);     // true
+[1, 2, 3].includes(4);     // false
+[1, 2, 3].includes(3, 3);  // false
+[1, 2, 3].includes(3, -1); // true
+[1, 2, NaN].includes(NaN); // true
+```
+
+- 如果 `fromIndex `为负值，计算出的索引将作为开始搜索`searchElement`的位置。如果计算出的索引小于 0，则整个数组都会被搜索。
+
+```javascript
+// 计算索引小于0
+// array length is 3
+// fromIndex is -100
+// computed index is 3 + (-100) = -97
+var arr = ['a', 'b', 'c'];
+
+arr.includes('a', -100); // true
+arr.includes('b', -100); // true
+arr.includes('c', -100); // true
+arr.includes('a', -2); // false
+```
+
+- 兼容性
+
+![](./images/includes_broswer.png)
+
+#### [求幂 (**)（Exponentiation operator）](https://github.com/tc39/proposal-exponentiation-operator)
+
+> 求幂运算符（`**`）返回将第一个操作数加到第二个操作数的幂的结果。它等效于`Math.pow`，不同之处在于它也接受BigInts作为操作数。
+>
+> 求幂运算符是是**右结合的**: `a ** b ** c` 等于 `a ** (b ** c)`.
+
+- 基本使用
+
+```javascript
+2 ** 3   // 8
+3 ** 2   // 9
+3 ** 2.5 // 15.588457268119896
+10 ** -1 // 0.1
+NaN ** 2 // NaN
+
+// 右结合性
+2 ** 3 ** 2   // 512
+2 ** (3 ** 2) // 512
+(2 ** 3) ** 2 // 64
+
+// 与一元运算符结合
+-(2 ** 2) // -4
+(-2) ** 2 // 4
+```
+
+- 在JavaScript里，你不可能写出一个不明确的求幂表达式。这就是说，你不能立刻将一个一元运算符（`+/-/~/!/delete/void/typeof`）放在基数前，这样做只会导致一个语法错误。
+
+```javascript
+-2 ** 2; 
+// 4 in Bash, -4 in other languages. 
+// This is invalid in JavaScript, as the operation is ambiguous. 
+
+-(2 ** 2); 
+// -4 in JavaScript and the author's intention is unambiguous. 
+```
+
+- 兼容性
+
+![](./images/exponentiation_broswer.png)
+
+
+### 参考
+- [TC39](https://github.com/tc39/proposals/blob/master/finished-proposals.md)
+- [MDN](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript)
