feat: 完善基本流程图

--- a/starter/tools/环境隔离.md
+++ b/starter/tools/环境隔离.md
@@ -10,6 +10,8 @@
 
 1. 常规的处理方式，通过某种规则判断区分代码环境
 
+![](./images/t_1.png)
+
 ```typescript
 // 获取环境标识
 const env = getCurrentEnv();
@@ -34,6 +36,8 @@ if (env === 'dev') {
 > 2. 环境判断隔离，很难发现其他环境中的问题，代码出错或者改错，不易发现；
 
 2. `process.env.NODE_ENV` 通过 node 运行时环境变量构建时区分代码环境
+
+![](./images/t_2.png)
 
 ```typescript
 // 获取环境标识
@@ -60,6 +64,8 @@ if (env === 'dev') {
 
 3. 拆分环境配置代码到不同的配置文件，通过打包方式，固定只获取某个环境配置文件
 
+![](./images/t_3.png)
+
 ```typescript
 /** 构建运行时环境配置 */
 // $ cross-env ENV=test npm run build
@@ -84,10 +90,13 @@ const config = require(`./config/${env}.config.js`);
 > 2. 一次编写构建配置，永久生效，仅需要维护不同环境配置文件即可，互不干扰；\
 >
 > 缺点：\
-> 3. 需要定制构建代码，动态获取配置到全局变量中，编写成本较高；\
-> 4. 不利于运行时环境配置变更，每次改动配置需要重启构建脚本；
+>
+> 1. 需要定制构建代码，动态获取配置到全局变量中，编写成本较高；\
+> 2. 不利于运行时环境配置变更，每次改动配置需要重启构建脚本；
 
 4. 拆分环境配置代码到不同的配置文件，通过动态生成各个环境配置文件到本地固定代码文件中，在其他业务代码中固定引用此文件
+
+![](./images/t_4.png)
 
 ```typescript
 /** 1. 定制脚本动态生成固定配置文件，此处需要定制 config 脚本，*.config.js 为环境配置文件，-s 对应源文件，-o 对应输出文件 */
@@ -120,6 +129,8 @@ import config from './config.js';
 
 ### 实现
 
+![](./images/t_4.png)
+
 #### 1. 定制脚本入口
 
 ```typescript
@@ -139,3 +150,4 @@ import config from './config.js';
 ```
 
 ### 小结
+
