--- a/starter/tools/环境隔离.md
+++ b/starter/tools/环境隔离.md
@@ -123,31 +123,129 @@ import config from './config.js';
 >
 > 1. 定制一个*脚本*入口，可以*读取命令行中定义的入参*；
 > 2. *动态读取*配置文件，并*重写配置文件*到固定文件中；
-> 3. 兼容扩展配置文件中的格式；
+> 3. 应用；
 >
 > 下面我们就来一步一步实现该思路
 
 ### 实现
 
+> 下面让我们来实现此功能
+
 ![](./images/t_4.png)
 
 #### 1. 定制脚本入口
 
-```typescript
+> 这里需要完成几个功能点：
+>
+> 1. 指定入口脚本文件
+> 2. 能够解析脚本入参
 
+1. 创建一个 config.js
+
+```typescript
+console.log('> config 入口');
+console.log('> ', process.argv); // 打印入参
+```
+
+2. 解析脚本入参，比如执行 `node ./lib/config.js -e dev -o dist/config.js`
+
+```bash
+> node ./lib/config.js -e dev -o dist/config.js
+
+> config 入口
+>  [
+  '/usr/local/bin/node',
+  '/Users/fosunhealth/Documents/ME/learning-tools/packages/config/lib/config.js',
+  '-e',
+  'dev',
+  '-o',
+  'dist/config.js'
+]
+```
+
+> 观察以上打印即可根据出参匹配脚本入参规则，读取到自己想要的参数
+
+- 3. 这里推荐下 `commander` 工具，封装了很多辅助功能，可以偷个懒
+
+```typescript
+const program = require('commander');
+const { version } = require('../package.json');
+
+program
+  .version(version)
+  //   .command('config') // 这里用作指定脚本名称，调试阶段可先注释
+  .usage('-e <env> -o <output>')
+  .description('🍈 生成配置文件')
+  .option('-e, --env <env>', '当前环境')
+  .option('-o, --output <output>', '输出路径')
+
+  .action(({ output, env }) => {
+    console.log('> 当前环境', env);
+    console.log('> 输出路径', output);
+  });
+
+// 解析脚本入参
+program.parse(process.argv);
+```
+
+> 此时再执行脚本，得到输出结果如下：
+>
+> 得到了我们需要指定的环境变量，以及需要输出的路径，这阶段宣告完成
+
+```bash
+> node ./lib/config.js -e dev -o dist/config.js
+
+> 当前环境 dev
+> 输出路径 dist/config.js
 ```
 
 #### 2. 动态读取配置文件，并生成到固定文件
 
-```typescript
+> 接上一步，此阶段需要处理入参并动态输出配置文件：
+>
+> 1. 根据 _env_ **读取**对应配置文件内容
+> 2. **写入**到固定文件中
 
+![](./images/t_6.png)
+
+```typescript
+// 文件处理工具
+const { existsSync, outputFileSync, mkdirSync, writeFileSync } = require('fs-extra');
+
+/** 自定义规则读取本地的配置文件 */
+const rootPath = process.cwd(); // 当前上下文根路径，这个很重要，需要基于当前上下文去寻找文件
+const configPath = join(rootPath, `./config/${env}.config.js`); // 本地环境配置文件
+const outputPath = join(rootPath, output || './src/config.ts'); // 生成配置路径
+
+if (!existsSync(configPath)) {
+  throw new Error(`${env} 环境配置文件不存在`);
+}
+
+try {
+  // 读取配置内容
+  const content = readFileSync(configPath, { encoding: 'utf-8' });
+  // 写入配置内容
+  writeFileSync(outputPath, content, { encoding: 'utf-8' });
+
+  console.log('> 生成配置文件成功.');
+} catch (error) {
+  console.error('> 生成配置文件异常', error);
+}
 ```
 
-#### 3. 兼容扩展配置
+> 如下图执行流程，即可动态生成所需环境配置了
+>
+> 1. 这样实现具体的配置文件读取规则就可以自定义拉，也能在*业务代码构建过程中动态生成*了
+> 2. 使用方式还可以通过*封装到私库中*，通过脚本引用，这样就能当做一个*团队工具*使用了
+>
+> 源码参考：https://github.com/howieyi/learning-tools/tree/master/packages/config
 
-```typescript
-
-```
+![](./images/t_5.png)
 
 ### 小结
 
+> 本文偏向思路型，主要给大家分享一个公司业务常见的场景，并未展开相关的业务延展性，主要还是需要根据公司独有的业务来定性； \
+> 本文均属*个人见解*，如有不对的烦请指出; \
+> 如有帮助的，铁子们动动小手，*加个前端技术群*咱们一起*探讨前端技术问题*~~~
+
+![](https://files.mdnice.com/user/5404/03f6ccde-7ac5-4ec9-a4d8-7283425eeb61.png)
