docs: png/jpg/webp

--- a/starter/tools/图片压缩.md
+++ b/starter/tools/图片压缩.md
@@ -1,3 +1,51 @@
 ### 痛点
 
 > 免费的图片压缩网站陆续开始收费，而且上传也很慢了
+
+### 比较
+
+#### WebP
+
+> WebP 是一种新兴的图像格式，创建于 2010 年，目前由 Google 基于收购 On2 Technologies 后获得的技术进行开发。它为图像提供卓越的无损和有损压缩，同时保持质量不变。有损压缩的程度是可调的，这意味着我们可以确定大小和质量之间的权衡。
+
+> 优点 :
+>
+> 1. 与 PNG 和 JPEG 相比，文件大小更小，质量相同。与 PNG 相比，WebP 无损格式可以将图像压缩多达 26%，而与 JPG 相比，WebP 有损图像在同等质量下的尺寸缩小 25-34%。
+> 2. 具有无损和有损压缩模式，Alpha 透明和动画特性。
+
+> 缺点：
+>
+> 1. 兼容性差。只有 Chrome、Edge、Firefox 和 Opera 已经原生支持 WebP 格式，Safari 和 Internet Explorer 除外。
+> 2. 除浏览器外，一般图形编辑软件无法打开或编辑 WebP 图片。
+
+#### JPG
+
+> 当提到 JPG 时，您可能还会将它与 JPEG 联系起来。从本质上讲，它们是同一种格式。JPG（Joint Photographic Expert Group）是一种常用的图像有损压缩方法，特别是对于那些由数码摄影产生的图像。压缩程度也可以调整，因此我们可以选择图像大小和质量之间的平衡。
+
+> 优点 :
+>
+> 1. 支持 24 位色，最高可达 1600 万色。
+> 2. 与 PNG 和 WebP 相比，JPEG 特别适用于具有高分辨率和大量渐变的大型、复杂、彩色图像。
+> 3. JPEG 的优点是可以以比 PNG 更小的文件大小压缩数字图像。
+
+> 缺点：
+>
+> 1. 不支持透明度（PNG 支持）。因此，它不适合徽标文本、图标或边界清晰的单色图形。
+> 2. JPEG 是有损压缩，因此在编辑和重新保存 JPEG 图像时，会导致质量下降。
+
+#### PNG
+
+> PNG（Portable Network Graphics）是一种支持无损压缩的光栅图形格式。它是作为流行的 GIF 格式的替代品而开发的。PNG 支持基于调色板的图像（8 位、24 位或 32 位）、灰度图像和全色非基于调色板的 RGB 或 RGBA 图像。
+
+> 优点：
+>
+> 1. PNG 相对于 JPG 的主要优点是无损压缩，这意味着每次打开和再次保存时质量都不会降低。
+> 2. PNG 支持大量颜色。PNG8 支持 256 种颜色，PNG24 支持超过 1600 万种颜色。
+> 3. 支持多级透明。PNG 有 256 级不透明度。
+
+> 缺点：
+>
+> 1. PNG 不支持动画。
+> 2. 由于采用无损压缩，PNG 图像通常尺寸较大。
+> 3. PNG 格式不支持嵌入大多数数码相机使用的 EXIF 元数据。
+
